--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,9 +35,8 @@ jobs:
 
       - name: Install Zig
         run: |
-          curl -LO https://ziglang.org/download/0.13.0/zig-linux-x86_64-0.13.0.tar.xz
-          tar -xf zig-linux-x86_64-0.13.0.tar.xz
-          sudo mv zig-linux-x86_64-0.13.0/zig /usr/local/bin
+          curl -s https://zigup.dev/install.sh | bash
+          echo "$HOME/.zig/bin" >> $GITHUB_PATH
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4.1.0
