--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,7 @@ jobs:
         run: |
           pip install cargo-lambda
           cargo lambda build --release
-          cargo lambda deploy arcxp -iam-role arn:aws:iam::846447858735:role/ArcxpLambdaRole;
+          cargo lambda deploy arcxp --iam-role arn:aws:iam::846447858735:role/ArcxpLambdaRole;
         env:
           AWS_DEFAULT_REGION: us-east-1
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
