--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Generate Swagger UI
+        uses: Legion2/swagger-ui-action@v1
+        with:
+          output: swagger-ui
+          spec-file: openapi.yaml
+          GITHUB_TOKEN: ${{ secrets.ACCESS_GITHUB_TOKEN }}
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.ACCESS_GITHUB_TOKEN }}
+          publish_dir: swagger-ui
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
