--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           output: swagger-ui
           spec-file: openapi.yaml
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_GITHUB_TOKEN }}
 
       - name: Debug Swagger UI output
         run: ls -al swagger-ui || echo "swagger-ui not found"
@@ -34,7 +34,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACCESS_GITHUB_TOKEN }}
           publish_dir: ./swagger-ui
 
       - name: Install Rust
