--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,12 +4,25 @@ on:
   push:
     branches:
       - main
-  # Optional: for PR merges
   pull_request:
     branches:
       - main
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Start LocalStack
+        uses: LocalStack/setup-localstack@v0.2.3
+        with:
+          install-awslocal: true
+
+      - name: Create Infra
+        run: ./scripts/tickets.sh
+
   deploy:
     runs-on: ubuntu-latest
 
