--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,16 @@ jobs:
       - name: Create Infra
         run: ./scripts/localstack/tickets.sh
 
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - name: Run Tests
+        run: cargo test --features test-utils
+
   deploy:
     runs-on: ubuntu-latest
     needs: tests
