--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 name = "arcxp"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
 
 [dependencies]
 anyhow = "1.0.98"
 aws-config = "1.8.0"
 aws-sdk-dynamodb = "1.80.0"
-axum = "0.8.4"
+axum = "0.7.9"
 axum-aws-lambda = "0.10.0"
 chrono = { version = "0.4.41", features = ["serde"] }
 lambda_http = "0.15.1"
@@ -18,7 +19,15 @@ tokio = { version = "1.43.0", features = ["full"] }
 tower = "0.5.2"
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.17.0", features = ["v7"] }
+serde_json = "1.0.140"
+
+[dev-dependencies]
+axum-test = "16.4.1"
+serial_test = "3.2.0"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 openssl = { version = "0.10.59", features = ["vendored"] }
 openssl-sys = { version = "0.9.95", features = ["vendored"] }
+
+[features]
+test-utils = []
