--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,22 +34,13 @@ jobs:
           profile: minimal
           override: true
 
-      - name: Cache cargo registry
-        uses: actions/cache@v3
-        continue-on-error: false
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: cargo-build-cache
-
-      - name: Build Project
-        run: cargo build
-
       - name: Run Tests
         run: cargo test --features test-utils
         env:
           AWS_ENDPOINT_URL: http://localhost:4576
+          AWS_ACCESS_KEY_ID: test
+          AWS_SECRET_ACCESS_KEY: test
+          AWS_REGION: us-east-1
 
   deploy:
     runs-on: ubuntu-latest
