add allowed origins in http api gateway

--- a/infra/api-gateway.yaml
+++ b/infra/api-gateway.yaml
@@ -34,6 +34,8 @@ Resources:
           - PATCH
           - PUT
           - DELETE
+        AllowOrigins:
+          - https://humbertoamdc.github.io
         MaxAge: 3600
       DisableExecuteApiEndpoint: false
       Name: arcxp-http-api
