--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,12 +57,6 @@ jobs:
           profile: minimal
           override: true
 
-      - name: Install AWS CLI
-        uses: unfor19/install-aws-cli-action@v1
-        with:
-          version: 2
-          verbose: false
-
       - name: Cache cargo registry
         uses: actions/cache@v3
         continue-on-error: false
@@ -78,11 +72,19 @@ jobs:
           cargo lambda build --release --arm64
           cargo lambda deploy arcxp --iam-role arn:aws:iam::846447858735:role/ArcxpLambdaRole
           sleep 10
-          aws --region us-east-1 lambda update-function-configuration --function-name arcxp --environment "Variables={DEPLOY_TARGET=lambda,ENV=production}" --no-cli-pager
         env:
           AWS_DEFAULT_REGION: us-east-1
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Install AWS CLI
+        uses: unfor19/install-aws-cli-action@v1
+        with:
+          version: 2
+          verbose: false
+
+      - name: Update Lambda Env
+        run: aws --region us-east-1 lambda update-function-configuration --function-name arcxp --environment "Variables={DEPLOY_TARGET=lambda,ENV=production}" --no-cli-pager
 
   generate-docs:
     runs-on: ubuntu-latest
