--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,10 +78,17 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Install AWS CLI
-        uses: unfor19/install-aws-cli-action@v1
+        run: |
+          apt-get -y update
+          apt-get -y install python3-pip
+          pip3 install awscli
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          version: 2
-          verbose: false
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
       - name: Update Lambda Env
         run: aws --region us-east-1 lambda update-function-configuration --function-name arcxp --environment "Variables={DEPLOY_TARGET=lambda,ENV=production}" --no-cli-pager
