--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -88,7 +88,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Update Lambda Env
-        run: aws --region us-east-1 lambda update-function-configuration --function-name arcxp --environment "Variables={DEPLOY_TARGET=lambda,ENV=production}" --no-cli-pager
+        run: aws --region us-east-1 lambda update-function-configuration --function-name arcxp --environment "Variables={DEPLOY_TARGET=lambda,ENV=production}"
 
   generate-docs:
     runs-on: ubuntu-latest
